--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h2>+150 ALUNAS TRANSFORMADAS</h2>
     <p>Elas emagreceram e emagrecem até hoje com a gente, vejam o que estão dizendo.</p>
     <div class="carrossel">
-      <div class="depoimento">
+      <div class="depoimento reveal">
         <video controls>
           <source src="videos/carolzinha.mp4" type="video/mp4" />
         </video>
@@ -71,21 +71,21 @@
   <section class="consultoria-online reveal" id="consultoria">
     <h2>Consultoria Online Lean & Leo Fit</h2>
     <p class="subtitulo">Treino sob medida pra você emagrecer com leveza</p>
-    <div class="planos">
-      <div class="plano">
+    <div class="planos reveal">
+      <div class="plano reveal">
         <img src="img/le-co-mfit.png" alt="App MFIT" />
         <h3>Só Treino</h3>
         <p>Plano com treino individualizado no app MFIT, grupo de suporte e ajustes mensais.</p>
         <a href="https://loja.infinitepay.io/romeland/rsr5851-plano-online" class="botao">Quero esse plano</a>
       </div>
-      <div class="plano">
+      <div class="plano reveal">
         <img src="img/le-co-mfit.png" alt="App MFIT" />
         <h3>Treino + Dieta</h3>
         <p>Inclui dieta personalizada com a nutricionista Lorenna Mendanha + nossa consultoria completa.</p>
         <a href="https://loja.infinitepay.io/romeland/rsr5851-plano-online" class="botao">Quero esse combo</a>
       </div>
     </div>
-    <div class="bonus">
+    <div class="bonus reveal">
       <h3>Bônus exclusivos</h3>
       <ul>
         <li>Verão sem lesão (acesso gratuito)</li>
