--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lean & Leo Fit</title>
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet" />
 </head>
 <body>
+
   <header>
     <div class="topo">
-      <img src="img/logo-avatar-com-fundo.png" alt="Logo Lean & Leo" class="logo" />
+      <img src="img/logo-avatar-com-fundo.png" alt="Lean & Leo Fit" class="logo" />
       <nav class="menu">
         <a href="index.html">Início</a><span class="dot">•</span>
         <a href="#resultados">Resultados</a><span class="dot">•</span>
@@ -28,40 +27,85 @@
   </header>
 
   <main>
+
     <section class="video-topo reveal">
+      <div class="overlay-text">
+        <h1>Emagrecimento de forma leve</h1>
+        <p>Metas pensadas para mulheres reais, ou seja, com uma vida caótica e apocalíptica</p>
+        <a href="https://wa.me/5599999999999" class="botao">Comece sua jornada</a>
+      </div>
       <video autoplay muted loop playsinline poster="img/textura-laranja.png">
         <source src="videos/topo.mp4" type="video/mp4" />
         Seu navegador não suporta vídeo.
       </video>
     </section>
 
-    <section id="resultados" class="reveal">
-      <!-- Conteúdo com antes/depois e depoimentos -->
+    <section class="grade-imagens reveal">
+      <img src="img/corpo-le-leo.png" alt="Antes e depois 1" />
+      <img src="img/le-van-dan.png" alt="Antes e depois 2" />
+      <img src="img/leo-hellen-jess.png" alt="Antes e depois 3" />
+      <img src="img/le-leo-emcasa.png" alt="Antes e depois 4" />
+      <img src="img/leo-goiania.png" alt="Antes e depois 5" />
+      <img src="img/le-dança.png" alt="Antes e depois 6" />
     </section>
 
-    <section id="consultoria" class="reveal">
-      <!-- Explicações da consultoria online -->
+    <section class="quemsomos reveal">
+      <h2>QUEM SOMOS NA FILA DO PÃO?</h2>
+      <p>Não é sobre sofrimento, é sobre rir, dançar, tropeçar no step e mesmo assim continuar. Aqui a gente emagrece mulheres com acolhimento, humor e verdade.</p>
+      <p>Emagrecimento com leveza e bom humor.</p>
+      <div class="imagens">
+        <img src="img/marcelina-shampoo.png" alt="Imagem engraçada 1" />
+        <img src="img/praia-step-shirley.png" alt="Imagem engraçada 2" />
+      </div>
     </section>
 
-    <section id="ebooks" class="reveal">
-      <!-- Cards de ebooks com botão "quero!" -->
+    <section class="depoimentos reveal">
+      <h2>Elas já sentiram a mudança</h2>
+      <div class="carrossel">
+        <!-- Aqui você implementaria com JS o carrossel dos cards de antes/depois -->
+        <!-- Exemplo de card -->
+        <div class="card">
+          <h3>Andressa – 2,5kg em 45 dias</h3>
+          <img src="img/andressa-antes.png" alt="Andressa antes" />
+          <img src="img/andressa-depois.png" alt="Andressa depois" />
+          <p>"Entrei no desafio na praça, adorei, fiz no outro ano de novo, amei e hoje faço a consultoria online. Não largo de mão jamais."</p>
+        </div>
+        <!-- Repete os cards com anne, iasmin, carita, etc. -->
+      </div>
     </section>
 
-    <section id="faq" class="reveal">
-      <!-- Perguntas frequentes -->
+    <section class="transformadas reveal">
+      <div class="banner">
+        <h2>+150 ALUNAS TRANSFORMADAS</h2>
+        <p>Elas emagreceram e emagrecem até hoje com a gente</p>
+      </div>
     </section>
 
-    <section id="contato" class="reveal">
-      <!-- Formulário de contato, sem formspree ou similares -->
+    <section class="videos reveal">
+      <div class="video-card">
+        <video controls><source src="videos/carolzinha.mp4" type="video/mp4" /></video>
+      </div>
+      <div class="video-card">
+        <img src="img/print-ana.png" alt="Print depoimento" />
+      </div>
+      <div class="video-card">
+        <video controls><source src="videos/sarahekaell.mp4" type="video/mp4" /></video>
+      </div>
+      <p>Já teve uma conexão assim com seu personal?</p>
     </section>
+
+    <!-- Consultoria virá na próxima entrega completa com os planos, cards e VSL -->
+
   </main>
 
   <footer class="reveal">
     <div class="redes">
-      <a href="#"><img src="img/whatsapp-icon.png" alt="WhatsApp" /></a>
-      <!-- Ícones das redes sociais -->
+      <a href="https://www.instagram.com/leaneleofit/" target="_blank"><img src="img/instagram.png" alt="Instagram" /></a>
+      <a href="https://www.youtube.com/@leaneleofit" target="_blank"><img src="img/youtube.png" alt="YouTube" /></a>
+      <a href="https://www.facebook.com/leaneleofit" target="_blank"><img src="img/facebook.png" alt="Facebook" /></a>
     </div>
     <p>&copy; 2025 Lean & Leo Fit. Todos os direitos reservados.</p>
+    <p class="rodape-frase">Se você chegou até aqui, já é uma Diva Leve em potencial. Obrigado pela visita. 🧡 Le & Leo.</p>
   </footer>
 
   <div id="whatsapp-botao" class="reveal">
