--- a/index.html
+++ b/index.html
@@ -41,60 +41,55 @@
     </section>
 
     <section class="grade-imagens reveal">
-      <img src="img/corpo-le-leo.png" alt="Antes e depois 1" />
-      <img src="img/le-van-dan.png" alt="Antes e depois 2" />
-      <img src="img/leo-hellen-jess.png" alt="Antes e depois 3" />
-      <img src="img/le-leo-emcasa.png" alt="Antes e depois 4" />
-      <img src="img/leo-goiania.png" alt="Antes e depois 5" />
-      <img src="img/le-dança.png" alt="Antes e depois 6" />
+      <img src="img/corpo-le-leo.png" alt="corpo-le-leo" />
+      <img src="img/le-van-dan.png" alt="le-van-dan" />
+      <img src="img/leo-hellen-jess.png" alt="leo-hellen-jess" />
+      <img src="img/le-leo-emcasa.png" alt="le-leo-emcasa" />
+      <img src="img/leo-goiania.png" alt="leo-goiania" />
+      <img src="img/le-danca.png" alt="le-danca" />
     </section>
 
     <section class="quemsomos reveal">
       <h2>QUEM SOMOS NA FILA DO PÃO?</h2>
       <p>Não é sobre sofrimento, é sobre rir, dançar, tropeçar no step e mesmo assim continuar. Aqui a gente emagrece mulheres com acolhimento, humor e verdade.</p>
-      <p>Emagrecimento com leveza e bom humor.</p>
       <div class="imagens">
-        <img src="img/marcelina-shampoo.png" alt="Imagem engraçada 1" />
-        <img src="img/praia-step-shirley.png" alt="Imagem engraçada 2" />
+        <img src="img/marcelina-shampoo.png" alt="Imagem 1" />
+        <img src="img/praia-step-shirley.png" alt="Imagem 2" />
       </div>
     </section>
 
     <section class="depoimentos reveal">
       <h2>Elas já sentiram a mudança</h2>
       <div class="carrossel">
-        <!-- Aqui você implementaria com JS o carrossel dos cards de antes/depois -->
-        <!-- Exemplo de card -->
+        <!-- Exemplo de card de antes e depois -->
         <div class="card">
           <h3>Andressa – 2,5kg em 45 dias</h3>
           <img src="img/andressa-antes.png" alt="Andressa antes" />
           <img src="img/andressa-depois.png" alt="Andressa depois" />
           <p>"Entrei no desafio na praça, adorei, fiz no outro ano de novo, amei e hoje faço a consultoria online. Não largo de mão jamais."</p>
         </div>
-        <!-- Repete os cards com anne, iasmin, carita, etc. -->
+        <!-- Outros cards seguem o mesmo formato -->
       </div>
     </section>
 
-    <section class="transformadas reveal">
-      <div class="banner">
-        <h2>+150 ALUNAS TRANSFORMADAS</h2>
-        <p>Elas emagreceram e emagrecem até hoje com a gente</p>
+    <section class="mockup-videos reveal">
+      <h2>+150 ALUNAS TRANSFORMADAS</h2>
+      <div class="mockup-cards">
+        <div class="mockup-card">
+          <video src="videos/carolzinha.mp4" controls></video>
+        </div>
+        <div class="mockup-card">
+          <img src="img/print-ana.png" alt="Depoimento Ana" />
+        </div>
+        <div class="mockup-card">
+          <video src="videos/sarahekaell.mp4" controls></video>
+        </div>
       </div>
+      <p class="texto-conexao">Já teve uma conexão assim com seu personal?</p>
     </section>
 
-    <section class="videos reveal">
-      <div class="video-card">
-        <video controls><source src="videos/carolzinha.mp4" type="video/mp4" /></video>
-      </div>
-      <div class="video-card">
-        <img src="img/print-ana.png" alt="Print depoimento" />
-      </div>
-      <div class="video-card">
-        <video controls><source src="videos/sarahekaell.mp4" type="video/mp4" /></video>
-      </div>
-      <p>Já teve uma conexão assim com seu personal?</p>
-    </section>
-
-    <!-- Consultoria virá na próxima entrega completa com os planos, cards e VSL -->
+    <!-- CONSULTORIA ONLINE, PLANOS, VSL, AVALIAÇÃO, PRESENCIAL, MINI-CARDS ETC.
+         SEGUE NA PRÓXIMA MENSAGEM PARA NÃO CORTAR -->
 
   </main>
 
