--- a/index.html
+++ b/index.html
@@ -9,45 +9,47 @@
 </head>
 <body>
 
-  <header>
-    <div class="topo">
-      <img src="img/logo-avatar-com-fundo.png" alt="Lean & Leo Fit" class="logo" />
-      <nav class="menu">
-        <a href="index.html">Início</a><span class="dot">•</span>
-        <a href="#resultados">Resultados</a><span class="dot">•</span>
-        <a href="#consultoria">Consultoria Online</a><span class="dot">•</span>
-        <a href="ebooks.html">E-books</a><span class="dot">•</span>
-        <a href="veraosemlesao.html">Verão sem Lesão</a><span class="dot">•</span>
-        <a href="produtos-presenciais.html">Produtos presenciais</a><span class="dot">•</span>
-        <a href="blog.html">Blog</a><span class="dot">•</span>
-        <a href="sobre.html">Sobre nós</a><span class="dot">•</span>
-        <a href="#contato">Contato</a>
-      </nav>
+  <header class="topo">
+    <div class="logo-bloco">
+      <img src="img/logo-avatar-com-fundo.png" alt="Logo Lean & Leo Fit" class="logo" />
+      <p class="logo-texto">Lean&Leofit</p>
     </div>
+    <nav class="menu">
+      <a href="#">Início</a><span class="dot">•</span>
+      <a href="#">Resultados</a><span class="dot">•</span>
+      <a href="#">Consultoria Online</a><span class="dot">•</span>
+      <a href="#">E-books</a><span class="dot">•</span>
+      <a href="#">Verão sem Lesão</a><span class="dot">•</span>
+      <a href="#">Produtos presenciais</a><span class="dot">•</span>
+      <a href="#">Blog</a><span class="dot">•</span>
+      <a href="#">Sobre nós</a><span class="dot">•</span>
+      <a href="#">Contato</a>
+    </nav>
   </header>
 
-  <main>
+  <section class="video-topo reveal">
+    <video autoplay muted loop playsinline class="bg-video">
+      <source src="videos/topo.mp4" type="video/mp4" />
+    </video>
+    <div class="video-overlay">
+      <h1>Emagrecimento de forma leve</h1>
+      <p>Metas pensadas para mulheres reais, ou seja, com uma vida caótica e apocalíptica</p>
+      <a href="https://wa.me/5599999999999" target="_blank" class="botao">Comece sua jornada</a>
+    </div>
+  </section>
 
-    <section class="video-topo reveal">
-      <div class="overlay-text">
-        <h1>Emagrecimento de forma leve</h1>
-        <p>Metas pensadas para mulheres reais, ou seja, com uma vida caótica e apocalíptica</p>
-        <a href="https://wa.me/5599999999999" class="botao">Comece sua jornada</a>
-      </div>
-      <video autoplay muted loop playsinline poster="img/textura-laranja.png">
-        <source src="videos/topo.mp4" type="video/mp4" />
-        Seu navegador não suporta vídeo.
-      </video>
-    </section>
+  <section class="grade-imagens reveal">
+    <img src="img/corpo-le-leo.png" alt="corpo-le-leo" />
+    <img src="img/le-van-dan.png" alt="le-van-dan" />
+    <img src="img/leo-hellen-jess.png" alt="leo-hellen-jess" />
+    <img src="img/le-leo-emcasa.png" alt="le-leo-emcasa" />
+    <img src="img/leo-goiania.png" alt="leo-goiania" />
+    <img src="img/le-danca.png" alt="le-danca" />
+  </section>
 
-    <section class="grade-imagens reveal">
-      <img src="img/corpo-le-leo.png" alt="corpo-le-leo" />
-      <img src="img/le-van-dan.png" alt="le-van-dan" />
-      <img src="img/leo-hellen-jess.png" alt="leo-hellen-jess" />
-      <img src="img/le-leo-emcasa.png" alt="le-leo-emcasa" />
-      <img src="img/leo-goiania.png" alt="leo-goiania" />
-      <img src="img/le-danca.png" alt="le-danca" />
-    </section>
+  <script src="js/main.js"></script>
+</body>
+</html>
 
     <section class="quemsomos reveal">
       <h2>QUEM SOMOS NA FILA DO PÃO?</h2>
