--- a/index.html
+++ b/index.html
@@ -52,13 +52,19 @@
 </html>
 
     <section class="quemsomos reveal">
-      <h2>QUEM SOMOS NA FILA DO PÃO?</h2>
-      <p>Não é sobre sofrimento, é sobre rir, dançar, tropeçar no step e mesmo assim continuar. Aqui a gente emagrece mulheres com acolhimento, humor e verdade.</p>
-      <div class="imagens">
-        <img src="img/marcelina-shampoo.png" alt="Imagem 1" />
-        <img src="img/praia-step-shirley.png" alt="Imagem 2" />
-      </div>
-    </section>
+      
+  <h2>QUEM SOMOS NA FILA DO PÃO?</h2>
+
+  <p>Não é sobre sofrimento, é sobre rir, dançar, tropeçar no step e mesmo assim continuar.</p>
+  <p>Aqui a gente emagrece mulheres com acolhimento, humor e verdade. É leve, é real.</p>
+
+  <div class="imagens-quemsomos">
+    <img src="img/marcelina-shampoo.png" alt="Aluna com shampoo na cabeça" />
+    <img src="img/praia-step-shirley.png" alt="Aluna no step na praia" />
+  </div>
+
+</section>
+
 
     <section class="depoimentos reveal">
       <h2>Elas já sentiram a mudança</h2>
