--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
   <section class="grade-imagens reveal">
     <img src="img/corpo-le-leo.png" alt="corpo-le-leo" />
-    <img src="img/le-van-dan.png" alt="le-van-dan" />
+    <img src="img/le-van-dan.jpg" alt="le-van-dan" />
     <img src="img/leo-hellen-jess.png" alt="leo-hellen-jess" />
-    <img src="img/le-leo-emcasa.png" alt="le-leo-emcasa" />
+    <img src="img/le-leo-emcasa.jpg" alt="le-leo-emcasa" />
     <img src="img/leo-goiania.png" alt="leo-goiania" />
     <img src="img/le-danca.png" alt="le-danca" />
   </section>
