--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
     </div>
   </section>
 
-  <section class="grade-imagens reveal">
-    <img src="img/corpo-le-leo.png" alt="corpo-le-leo" />
-    <img src="img/le-van-dan.jpg" alt="le-van-dan" />
-    <img src="img/leo-hellen-jess.png" alt="leo-hellen-jess" />
-    <img src="img/le-leo-emcasa.jpg" alt="le-leo-emcasa" />
-    <img src="img/leo-goiania.png" alt="leo-goiania" />
-    <img src="img/le-danca.png" alt="le-danca" />
-  </section>
+ <section class="grade-imagens reveal">
+  <img src="img/corpo-le-leo.png" alt="Leandro e Leonardo posando lado a lado" />
+  <img src="img/le-van-dan.jpg" alt="Leandro com Vanessa e Dani" />
+  <img src="img/leo-hellen-jess.png" alt="Leandro com Hellen e Jess" />
+  <img src="img/le-leo-emcasa.jpg" alt="Leandro e Leonardo em casa" />
+  <img src="img/leo-goiania.png" alt="Leandro em Goiânia" />
+  <img src="img/le-danca.png" alt="Leandro dançando" />
+</section>
 
   <script src="js/main.js"></script>
 </body>
@@ -59,8 +59,8 @@
   <p>Aqui a gente emagrece mulheres com acolhimento, humor e verdade. É leve, é real.</p>
 
   <div class="imagens-quemsomos">
-    <img src="img/marcelina-shampoo.png" alt="Aluna com shampoo na cabeça" />
-    <img src="img/praia-step-shirley.png" alt="Aluna no step na praia" />
+   <img src="img/marcelina-shampoo.png" alt="Leandro e Leonardo vestidos como Marcelina e Dona Hermínia" />
+    <img src="img/praia-step-shirley.png" alt="Leandro e Leonardo vestidos como Shirley e Stefany na praia" />
   </div>
 
 </section>
