--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
   <p>Aqui a gente emagrece mulheres com acolhimento, humor e verdade. É leve, é real.</p>
 
   <div class="imagens-quemsomos">
-   <img src="img/marcelina-shampoo.png" alt="Leandro e Leonardo vestidos como Marcelina e Dona Hermínia" />
-    <img src="img/praia-step-shirley.png" alt="Leandro e Leonardo vestidos como Shirley e Stefany na praia" />
+   <img src="img/marcelina-shampoo.jpg" alt="Leandro e Leonardo vestidos como Marcelina e Dona Hermínia" />
+    <img src="img/praia-step-shirley.heic" alt="Leandro e Leonardo vestidos como Shirley e Stefany na praia" />
   </div>
 
 </section>
