--- a/index.html
+++ b/index.html
@@ -65,20 +65,79 @@
 
 </section>
 
-
     <section class="depoimentos reveal">
-      <h2>Elas já sentiram a mudança</h2>
-      <div class="carrossel">
-        <!-- Exemplo de card de antes e depois -->
-        <div class="card">
-          <h3>Andressa – 2,5kg em 45 dias</h3>
-          <img src="img/andressa-antes.png" alt="Andressa antes" />
-          <img src="img/andressa-depois.png" alt="Andressa depois" />
-          <p>"Entrei no desafio na praça, adorei, fiz no outro ano de novo, amei e hoje faço a consultoria online. Não largo de mão jamais."</p>
-        </div>
-        <!-- Outros cards seguem o mesmo formato -->
+  <h2>Elas já sentiram a mudança</h2>
+
+  <div class="carrossel-cards">
+
+    <!-- Andressa -->
+    <div class="card-depoimento">
+      <h3>Andressa – 2,5kg em 45 dias</h3>
+      <div class="fotos">
+        <img src="img/andressa-antes.png" alt="Andressa antes" />
+        <img src="img/andressa-depois.png" alt="Andressa depois" />
       </div>
-    </section>
+      <p>“Entrei no desafio na praça, adorei, fiz no outro ano de novo, amei e hoje faço a consultoria online. Não largo de mão jamais.”</p>
+    </div>
+
+    <!-- Anne -->
+    <div class="card-depoimento">
+      <h3>Anne – 4kg em 2 meses</h3>
+      <div class="fotos">
+        <img src="img/anne-antes.png" alt="Anne antes" />
+        <img src="img/anne-depois.png" alt="Anne depois" />
+      </div>
+      <p>“Descobri que sou capaz de mudar minha saúde sem me cobrar demais. Nunca fui tão feliz no meu corpo.”</p>
+    </div>
+
+    <!-- Iasmin -->
+    <div class="card-depoimento">
+      <h3>Iasmin – 4,2kg em 45 dias</h3>
+      <div class="fotos">
+        <img src="img/iasmin-antes.png" alt="Iasmin antes" />
+        <img src="img/iasmin-depois.png" alt="Iasmin depois" />
+      </div>
+      <p>“Achei que seria difícil, mas fui acolhida desde o começo. Hoje me olho no espelho com orgulho do que conquistei.”</p>
+    </div>
+
+    <!-- Carita -->
+    <div class="card-depoimento">
+      <h3>Carita – 2kg em 30 dias</h3>
+      <div class="fotos">
+        <img src="img/carita-antes.png" alt="Carita antes" />
+        <img src="img/carita-depois.png" alt="Carita depois" />
+      </div>
+      <p>“Nunca imaginei que 30 dias pudessem fazer tanta diferença. Me senti respeitada e motivada o tempo todo.”</p>
+    </div>
+
+    <!-- Mariana -->
+    <div class="card-depoimento">
+      <h3>Mariana – 3,5kg em 45 dias</h3>
+      <div class="fotos">
+        <img src="img/mariana-antes.png" alt="Mariana antes" />
+        <img src="img/mariana-depois.png" alt="Mariana depois" />
+      </div>
+      <p>“A leveza de vocês mudou meu jeito de me cuidar. Pela primeira vez, não senti culpa nem cobrança.”</p>
+    </div>
+
+    <!-- Eliara -->
+    <div class="card-depoimento">
+      <h3>Eliara – 1,5kg em 30 dias</h3>
+      <div class="fotos">
+        <img src="img/eliara-antes.png" alt="Eliara antes" />
+        <img src="img/eliara-depois.png" alt="Eliara depois" />
+      </div>
+      <p>“Achei que meu resultado não seria visível, mas me surpreendi com a diferença e com a motivação que recebi.”</p>
+    </div>
+
+    <!-- Dani -->
+    <div class="card-depoimento">
+      <h3>Dani – 8kg em 4 meses</h3>
+      <div class="fotos">
+        <img src="img/resultado-dani.png" alt="Resultado Dani" />
+      </div>
+      <p>“Foram 4 meses que mudaram minha relação com o espelho. O apoio e o acolhimento fizeram toda a diferença.”</p>
+    </div>
 
     <section class="mockup-videos reveal">
       <h2>+150 ALUNAS TRANSFORMADAS</h2>
@@ -95,9 +154,6 @@
       </div>
       <p class="texto-conexao">Já teve uma conexão assim com seu personal?</p>
     </section>
-
-    <!-- CONSULTORIA ONLINE, PLANOS, VSL, AVALIAÇÃO, PRESENCIAL, MINI-CARDS ETC.
-         SEGUE NA PRÓXIMA MENSAGEM PARA NÃO CORTAR -->
 
   </main>
 
