--- a/index.html
+++ b/index.html
@@ -65,9 +65,12 @@
 
 </section>
 
-   <!-- Seção: Transformações das Alunas (Carrossel) -->
-<section class="transformacoes-carrossel">
-  <div class="container-carrossel" id="carrossel-transformacoes">
+  <!-- Seção: Transformações (Carrossel Infinito) -->
+<section class="transformacoes">
+  <div class="container-transformacoes">
+  
+    <div class="carrossel-track">
+      <!-- CARDS ORIGINAIS -->
 
     <!-- Card: Andressa -->
     <div class="card-transformacao">
@@ -145,6 +148,82 @@
       <p class="depoimento-transformacao">“Foram 4 meses que mudaram minha relação com o espelho. O apoio e o acolhimento fizeram toda a diferença.”</p>
     </div>
 
+        <!-- Card: Andressa -->
+    <div class="card-transformacao">
+      <div class="topo-nome">ANDRESSA</div>
+      <div class="imagens-transformacao">
+        <img src="img/andressa-antes.png" alt="Andressa antes" />
+        <img src="img/andressa-depois.png" alt="Andressa depois" />
+      </div>
+      <div class="peso-tempo">–2,5kg em 45 dias</div>
+      <p class="depoimento-transformacao">“Entrei no desafio na praça, adorei! Fiz no outro ano de novo e amei! Hoje faço a consultoria online, não largo de mão jamais.”</p>
+    </div>
+
+    <!-- Card: Anne -->
+    <div class="card-transformacao">
+      <div class="topo-nome">ANNE</div>
+      <div class="imagens-transformacao">
+        <img src="img/anne-antes.png" alt="Anne antes" />
+        <img src="img/anne-depois.png" alt="Anne depois" />
+      </div>
+      <div class="peso-tempo">–5kg em 45 dias</div>
+      <p class="depoimento-transformacao">“Descobri que sou capaz de mudar minha saúde sem me cobrar demais. Nunca fui tão feliz no meu corpo.”</p>
+    </div>
+
+    <!-- Card: Iasmin -->
+    <div class="card-transformacao">
+      <div class="topo-nome">IASMIN</div>
+      <div class="imagens-transformacao">
+        <img src="img/iasmin-antes.png" alt="Iasmin antes" />
+        <img src="img/iasmin-depois.png" alt="Iasmin depois" />
+      </div>
+      <div class="peso-tempo">–4,2kg em 45 dias</div>
+      <p class="depoimento-transformacao">“Achei que seria difícil, mas fui acolhida desde o começo. Hoje me olho no espelho com orgulho do que conquistei.”</p>
+    </div>
+
+    <!-- Card: Carita -->
+    <div class="card-transformacao">
+      <div class="topo-nome">CARITA</div>
+      <div class="imagens-transformacao">
+        <img src="img/carita-antes.png" alt="Carita antes" />
+        <img src="img/carita-depois.png" alt="Carita depois" />
+      </div>
+      <div class="peso-tempo">–2kg em 30 dias</div>
+      <p class="depoimento-transformacao">“Nunca imaginei que 30 dias pudessem fazer tanta diferença. Me senti respeitada e motivada o tempo todo.”</p>
+    </div>
+
+    <!-- Card: Mariana -->
+    <div class="card-transformacao">
+      <div class="topo-nome">MARIANA</div>
+      <div class="imagens-transformacao">
+        <img src="img/mariana-antes.png" alt="Mariana antes" />
+        <img src="img/mariana-depois.png" alt="Mariana depois" />
+      </div>
+      <div class="peso-tempo">–3,5kg em 45 dias</div>
+      <p class="depoimento-transformacao">“A leveza de vocês mudou meu jeito de me cuidar. Pela primeira vez, não senti culpa nem cobrança.”</p>
+    </div>
+
+    <!-- Card: Eliara -->
+    <div class="card-transformacao">
+      <div class="topo-nome">ELIARA</div>
+      <div class="imagens-transformacao">
+        <img src="img/eliara-antes.png" alt="Eliara antes" />
+        <img src="img/eliara-depois.png" alt="Eliara depois" />
+      </div>
+      <div class="peso-tempo">–1,5kg em 30 dias</div>
+      <p class="depoimento-transformacao">“Achei que meu resultado não seria visível, mas me surpreendi com a diferença e com a motivação que recebi.”</p>
+    </div>
+
+    <!-- Card: Dani (1 imagem) -->
+    <div class="card-transformacao">
+      <div class="topo-nome">DANI</div>
+      <div class="imagens-transformacao">
+        <img src="img/resultado-dani.png" alt="Resultado da Dani" />
+      </div>
+      <div class="peso-tempo">–5kg em 40 dias</div>
+      <p class="depoimento-transformacao">“Foram 4 meses que mudaram minha relação com o espelho. O apoio e o acolhimento fizeram toda a diferença.”</p>
+    </div>
+      
   </div>
 </section>
 
