--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
     <!-- Card: Dani (1 imagem) -->
     <div class="card-transformacao">
       <div class="topo-nome">DANI</div>
-      <div class="imagens-transformacao">
-        <img src="img/resultado-dani.jpg" alt="Resultado da Dani" />
-      </div>
+     <div class="imagens-transformacao unica">
+  <img src="img/resultado-dani.jpg" alt="Resultado da Dani" />
+</div>
       <div class="peso-tempo">–5kg em 40 dias</div>
       <p class="depoimento-transformacao">“Foram 40 dias que mudaram minha relação com o espelho. O apoio e o acolhimento fizeram toda a diferença.”</p>
     </div>
@@ -217,9 +217,9 @@
     <!-- Card: Dani (1 imagem) -->
     <div class="card-transformacao">
       <div class="topo-nome">DANI</div>
-      <div class="imagens-transformacao">
-        <img src="img/resultado-dani.jpg" alt="Resultado da Dani" />
-      </div>
+     <div class="imagens-transformacao unica">
+  <img src="img/resultado-dani.jpg" alt="Resultado da Dani" />
+</div>
       <div class="peso-tempo">–5kg em 40 dias</div>
       <p class="depoimento-transformacao">“Foram 40 dias que mudaram minha relação com o espelho. O apoio e o acolhimento fizeram toda a diferença.”</p>
     </div>
