--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
 </head>
 <body>
 
-  <header class="topo">
-    <div class="logo-bloco">
-      <img src="img/logo-avatar-com-fundo.png" alt="Logo Lean & Leo Fit" class="logo" />
-      <p class="logo-texto">Lean&Leofit</p>
+ <header>
+  <div class="topo">
+    <div class="logo-container">
+      <img src="img/logo-avatar-com-fundo.png" alt="Logo Lean&Leo Fit" class="logo" />
+      <span class="logo-text">Lean&Leofit</span>
     </div>
     <nav class="menu">
-      <a href="#">Início</a><span class="dot">•</span>
-      <a href="#">Resultados</a><span class="dot">•</span>
-      <a href="#">Consultoria Online</a><span class="dot">•</span>
-      <a href="#">E-books</a><span class="dot">•</span>
-      <a href="#">Verão sem Lesão</a><span class="dot">•</span>
-      <a href="#">Produtos presenciais</a><span class="dot">•</span>
-      <a href="#">Blog</a><span class="dot">•</span>
-      <a href="#">Sobre nós</a><span class="dot">•</span>
-      <a href="#">Contato</a>
+      <a href="index.html">Início</a><span class="dot">•</span>
+      <a href="#resultados">Resultados</a><span class="dot">•</span>
+      <a href="#consultoria">Consultoria Online</a><span class="dot">•</span>
+      <a href="ebooks.html">E-books</a><span class="dot">•</span>
+      <a href="veraosemlesao.html">Verão sem Lesão</a><span class="dot">•</span>
+      <a href="produtos-presenciais.html">Produtos presenciais</a><span class="dot">•</span>
+      <a href="blog.html">Blog</a><span class="dot">•</span>
+      <a href="sobre.html">Sobre nós</a><span class="dot">•</span>
+      <a href="#contato">Contato</a>
     </nav>
-  </header>
+  </div>
+</header>
 
   <section class="video-topo reveal">
     <video autoplay muted loop playsinline class="bg-video">
