--- a/index.html
+++ b/index.html
@@ -15,15 +15,22 @@
       <img src="img/logo-avatar-com-fundo.png" alt="Logo Lean&Leo Fit" class="logo" />
       <span class="logo-text">Lean&Leofit</span>
     </div>
-    <nav class="menu">
-      <a href="index.html">Início</a><span class="dot">•</span>
-      <a href="#resultados">Resultados</a><span class="dot">•</span>
-      <a href="#consultoria">Consultoria Online</a><span class="dot">•</span>
-      <a href="ebooks.html">E-books</a><span class="dot">•</span>
-      <a href="veraosemlesao.html">Verão sem Lesão</a><span class="dot">•</span>
-      <a href="produtos-presenciais.html">Produtos presenciais</a><span class="dot">•</span>
-      <a href="blog.html">Blog</a><span class="dot">•</span>
-      <a href="sobre.html">Sobre nós</a><span class="dot">•</span>
+
+    <!-- Botão hambúrguer -->
+    <div class="hamburger" id="hamburger">
+      &#9776;
+    </div>
+
+    <!-- Menu de navegação -->
+    <nav class="menu" id="menu">
+      <a href="index.html">Início</a>
+      <a href="#resultados">Resultados</a>
+      <a href="#consultoria">Consultoria Online</a>
+      <a href="ebooks.html">E-books</a>
+      <a href="veraosemlesao.html">Verão sem Lesão</a>
+      <a href="produtos-presenciais.html">Produtos presenciais</a>
+      <a href="blog.html">Blog</a>
+      <a href="sobre.html">Sobre nós</a>
       <a href="#contato">Contato</a>
     </nav>
   </div>
