--- a/index.html
+++ b/index.html
@@ -237,20 +237,20 @@
 </section>
 
     <section class="mockup-videos reveal">
-      <h2>+150 ALUNAS TRANSFORMADAS</h2>
-      <div class="mockup-cards">
-        <div class="mockup-card">
-          <video src="videos/carolzinha.mp4" controls></video>
-        </div>
-        <div class="mockup-card">
-          <img src="img/print-ana.png" alt="Depoimento Ana" />
-        </div>
-        <div class="mockup-card">
-          <video src="videos/sarahekaell.mp4" controls></video>
-        </div>
-      </div>
-      <p class="texto-conexao">Já teve uma conexão assim com seu personal?</p>
-    </section>
+  <h2>+150 ALUNAS TRANSFORMADAS</h2>
+  <div class="mockup-cards">
+    <div class="mockup-card">
+      <video src="videos/carolzinha.mp4" controls playsinline></video>
+    </div>
+    <div class="mockup-card">
+      <img src="img/print-ana.png" alt="Depoimento Ana" />
+    </div>
+    <div class="mockup-card">
+      <video src="videos/sarahekaell.mp4" controls playsinline></video>
+    </div>
+  </div>
+  <p class="texto-conexao">Já teve uma conexão assim com seu personal?</p>
+</section>
 
   </main>
 
