--- a/index.html
+++ b/index.html
@@ -254,6 +254,21 @@
 
   </main>
 
+<div class="card-consultoria reveal">
+  <div class="card-topo">
+    <h3>PLANO TRIMESTRAL</h3>
+    <p class="preco">R$ 297,00</p>
+  </div>
+  <ul class="beneficios">
+    <li>✓ Avaliação física inicial</li>
+    <li>✓ Treinos mensais personalizados</li>
+    <li>✓ Suporte pelo WhatsApp</li>
+    <li>✓ E-books e materiais de apoio</li>
+  </ul>
+  <a href="https://wa.me/5599999999999" target="_blank" class="botao-card">Quero esse!</a>
+</div>
+
+
   <footer class="reveal">
     <div class="redes">
       <a href="https://www.instagram.com/leaneleofit/" target="_blank"><img src="img/instagram.png" alt="Instagram" /></a>
