--- a/index.html
+++ b/index.html
@@ -233,7 +233,6 @@
       <p class="depoimento-transformacao">“Foram 40 dias que mudaram minha relação com o espelho. O apoio e o acolhimento fizeram toda a diferença.”</p>
     </div>
       
-  </div>
 </section>
 
     <section class="mockup-videos reveal">
@@ -254,20 +253,19 @@
 
   </main>
 
-<div class="card-consultoria reveal">
-  <div class="card-topo">
+<div class="card-consultoria styled reveal">
+  <div class="card-header">
     <h3>PLANO TRIMESTRAL</h3>
-    <p class="preco">R$ 297,00</p>
+    <p class="preco">R$ 297</p>
   </div>
   <ul class="beneficios">
-    <li>✓ Avaliação física inicial</li>
-    <li>✓ Treinos mensais personalizados</li>
-    <li>✓ Suporte pelo WhatsApp</li>
-    <li>✓ E-books e materiais de apoio</li>
+    <li>✔ Avaliação física inicial</li>
+    <li>✔ Treinos mensais personalizados</li>
+    <li>✔ Suporte diário pelo WhatsApp</li>
+    <li>✔ Acesso a materiais extras</li>
   </ul>
-  <a href="https://wa.me/5599999999999" target="_blank" class="botao-card">Quero esse!</a>
+  <a href="https://wa.me/5562992141313" target="_blank" class="botao-card-glass">Quero esse!</a>
 </div>
-
 
   <footer class="reveal">
     <div class="redes">
