--- a/index.html
+++ b/index.html
@@ -253,19 +253,59 @@
 
   </main>
 
-<div class="card-consultoria styled reveal">
-  <div class="card-header">
-    <h3>PLANO TRIMESTRAL</h3>
-    <p class="preco">R$ 297</p>
+<section class="planos reveal" id="consultoria">
+  <h2>Planos de Consultoria Online</h2>
+  <div class="cards-planos">
+
+    <!-- PLANO MENSAL -->
+    <div class="card-consultoria styled">
+      <div class="card-header">
+        <h3>Plano Mensal</h3>
+        <div class="preco">R$ 100,00/mês</div>
+      </div>
+      <ul class="beneficios">
+        <li>✔ App de acesso aos treinos</li>
+        <li>✔ Planilha personalizada de treinos</li>
+        <li>✔ Vídeos dos exercícios</li>
+        <li>✔ 3 treinos trocados mensalmente</li>
+        <li>✔ Suporte direto com a gente</li>
+        <li>✔ <s>E-book 5 verdades do emagrecimento. R$ 29,99</s></li>
+        <li>✔ <s>E-book comer bem, viver saudável R$ 49,99</s></li>
+        <li>✔ Brinde surpresa entregue na sua casa</li>
+      </ul>
+      <a href="https://wa.me/5562992141313" class="botao-card-glass">Quero esse!</a>
+    </div>
+
+    <!-- PLANO TRIMESTRAL -->
+    <div class="card-consultoria styled">
+      <div class="card-header">
+        <h3>Plano Trimestral</h3>
+        <div class="preco">R$ 90,00/mês</div>
+      </div>
+      <ul class="beneficios">
+        <li>✔ Todos os benefícios do plano mensal</li>
+        <li>✔ + E-book de receitas práticas da nutricionista</li>
+        <li>✔ + Prioridade em desafios exclusivos</li>
+      </ul>
+      <a href="https://wa.me/5562992141313" class="botao-card-glass">Quero esse!</a>
+    </div>
+
+    <!-- PLANO SEMESTRAL -->
+    <div class="card-consultoria styled">
+      <div class="card-header">
+        <h3>Plano Semestral</h3>
+        <div class="preco">R$ 83,30/mês</div>
+      </div>
+      <ul class="beneficios">
+        <li>✔ Todos os benefícios do plano mensal + trimestral</li>
+        <li>✔ + Brinde físico extra entregue na sua casa</li>
+        <li>✔ + Videochamada bônus com Lean & Leo</li>
+      </ul>
+      <a href="https://wa.me/5562992141313" class="botao-card-glass">Quero esse!</a>
+    </div>
+
   </div>
-  <ul class="beneficios">
-    <li>✔ Avaliação física inicial</li>
-    <li>✔ Treinos mensais personalizados</li>
-    <li>✔ Suporte diário pelo WhatsApp</li>
-    <li>✔ Acesso a materiais extras</li>
-  </ul>
-  <a href="https://wa.me/5562992141313" target="_blank" class="botao-card-glass">Quero esse!</a>
-</div>
+</section>
 
   <footer class="reveal">
     <div class="redes">
