--- a/index.html
+++ b/index.html
@@ -253,56 +253,79 @@
 
   </main>
 
-<section class="planos reveal" id="consultoria">
-  <h2>Planos de Consultoria Online</h2>
+<section class="sessao-consultoria reveal">
+  <h2>CONSULTORIA ONLINE</h2>
+  <img src="img/banner-co-forms.png" alt="Banner Consultoria" class="banner-consultoria" />
+
+  <p class="texto-consultoria">
+    Nosso acompanhamento é 100% online e é ideal pra você que quer emagrecer de forma leve, realista e com orientação de verdade.<br />
+    Treinos acessíveis com linguagem SIMPLES, no seu ritmo, com foco no que importa: resultados reais sem pressa e sem neura.
+  </p>
+
+  <ul class="lista-consultoria">
+    <li>Treinos personalizados com vídeos explicativos</li>
+    <li>Opções pra treinar em casa, na academia ou ao ar livre</li>
+    <li>Planilhas mensais ajustadas conforme sua evolução</li>
+    <li>Acompanhamento direto com a gente pelo WhatsApp</li>
+    <li>Dúvidas respondidas todos os dias</li>
+  </ul>
+
+  <p class="convite-final">“Estamos esperando seu clique para treinar com a gente.”</p>
+
+  <div class="imagens-consultoria">
+    <img src="img/le-co-mfit.png" alt="Consultoria 1" />
+    <img src="img/le-leo-branco.png" alt="Consultoria 2" />
+    <img src="img/le-leo-emcasa.png" alt="Consultoria 3" />
+  </div>
+
   <div class="cards-planos">
-
-    <!-- PLANO MENSAL -->
+    <!-- Card MENSAL -->
     <div class="card-consultoria styled">
-      <div class="card-header">
-        <h3>Plano Mensal</h3>
-        <div class="preco">R$ 100,00/mês</div>
-      </div>
+      <div class="card-topo">Plano Mensal</div>
+      <div class="card-preco">R$ 100,00/mês</div>
       <ul class="beneficios">
-        <li>✔ App de acesso aos treinos</li>
-        <li>✔ Planilha personalizada de treinos</li>
-        <li>✔ Vídeos dos exercícios</li>
-        <li>✔ 3 treinos trocados mensalmente</li>
-        <li>✔ Suporte direto com a gente</li>
-        <li>✔ <s>E-book 5 verdades do emagrecimento. R$ 29,99</s></li>
-        <li>✔ <s>E-book comer bem, viver saudável R$ 49,99</s></li>
-        <li>✔ Brinde surpresa entregue na sua casa</li>
+        <li>✓ App de acesso aos treinos</li>
+        <li>✓ Planilha personalizada de treinos</li>
+        <li>✓ Vídeos dos exercícios</li>
+        <li>✓ 1 treino trocado por mês</li>
+        <li>✓ Suporte direto com a gente</li>
+        <li><s>E-book 5 verdades do emagrecimento – R$ 29,99</s></li>
+        <li><s>E-book comer bem, viver saudável – R$ 49,99</s></li>
+        <li>✓ Brinde surpresa entregue na sua casa</li>
       </ul>
-      <a href="https://wa.me/5562992141313" class="botao-card-glass">Quero esse!</a>
+      <div class="preco-final">De R$ 129,99 por R$ 100,00</div>
+      <a href="#" class="botao-card-glass">Quero esse!</a>
     </div>
 
-    <!-- PLANO TRIMESTRAL -->
+    <!-- Card TRIMESTRAL -->
     <div class="card-consultoria styled">
-      <div class="card-header">
-        <h3>Plano Trimestral</h3>
-        <div class="preco">R$ 90,00/mês</div>
-      </div>
+      <div class="card-topo">Plano Trimestral</div>
+      <div class="card-preco">R$ 90,00/mês</div>
       <ul class="beneficios">
-        <li>✔ Todos os benefícios do plano mensal</li>
-        <li>✔ + E-book de receitas práticas da nutricionista</li>
-        <li>✔ + Prioridade em desafios exclusivos</li>
+        <li>✓ Todos os benefícios do plano mensal</li>
+        <li>✓ E-book comer bem e viver saudável – com receitas da Nutri Lorenna</li>
+        <li>✓ Prioridade nos desafios exclusivos</li>
       </ul>
-      <a href="https://wa.me/5562992141313" class="botao-card-glass">Quero esse!</a>
+      <div class="preco-final">De R$ 349,98 por R$ 270,00</div>
+      <a href="#" class="botao-card-glass">Quero esse!</a>
     </div>
 
-    <!-- PLANO SEMESTRAL -->
+    <!-- Card SEMESTRAL -->
     <div class="card-consultoria styled">
-      <div class="card-header">
-        <h3>Plano Semestral</h3>
-        <div class="preco">R$ 83,30/mês</div>
-      </div>
+      <div class="card-topo">Plano Semestral</div>
+      <div class="card-preco">R$ 83,30/mês</div>
       <ul class="beneficios">
-        <li>✔ Todos os benefícios do plano mensal + trimestral</li>
-        <li>✔ + Brinde físico extra entregue na sua casa</li>
-        <li>✔ + Videochamada bônus com Lean & Leo</li>
+        <li>✓ Todos os benefícios do plano mensal + trimestral</li>
+        <li>✓ Brinde físico extra entregue na sua casa</li>
+        <li>✓ Videochamada bônus com Lean & Leo</li>
+        <li><s>VSL "Verão sem Lesão" – R$ 89,90</s></li>
       </ul>
-      <a href="https://wa.me/5562992141313" class="botao-card-glass">Quero esse!</a>
+      <div class="preco-final">De R$ 669,97 por R$ 500,00</div>
+      <a href="#" class="botao-card-glass">Quero esse!</a>
     </div>
+  </div>
+</section>
+
 
   </div>
 </section>
