--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
   <p class="convite-final">“Estamos esperando seu clique para treinar com a gente.”</p>
 
   <div class="imagens-consultoria">
-    <img src="img/le-co-mfit.png" alt="Consultoria 1" />
-    <img src="img/le-leo-branco.png" alt="Consultoria 2" />
-    <img src="img/le-leo-emcasa.png" alt="Consultoria 3" />
+    <img src="img/le-co-mfit.jpg" alt="Consultoria 1" />
+    <img src="img/le-leo-branco.jpg" alt="Consultoria 2" />
+    <img src="img/le-leo-emcasa.jpg" alt="Consultoria 3" />
   </div>
 
   <div class="cards-planos">
